2015-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/rtssmooth.cpp: Use automatic as<Cube> converter recently added
	to RcppArmadillo

	* tests/test_rtssmooth.R: Corresponding update

2014-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.5 with initial repo commit
